--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f1fc3b83-3530-4bf2-acac-06b2301120b1.preview.emergentagent.com
 WDS_SOCKET_PORT=443
