--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://301cc15e-4441-4c11-aa55-bbe12559ed17.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://fixed-everything.preview.emergentagent.com
 WDS_SOCKET_PORT=443
