--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://d55edc1d-0731-4890-9c06-245a3916e0f2.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://build-continue-1.preview.emergentagent.com
 WDS_SOCKET_PORT=443
