--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://upgrade-plus.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://feature-boost-5.preview.emergentagent.com
 WDS_SOCKET_PORT=443
